--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "@react-three/drei": "^9.99.1",
-    "@react-three/fiber": "^8.15.16",
+    "@react-three/fiber": "^8.15.19",
     "framer-motion": "^11.0.6",
     "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
